# modeling-systems

cp1_rng_distribution/: formulas.py  lab1.ipynb
cp2_discrete_event_system_oop/: main.py
cp2_discrete_event_system_oop/core/: model.py
cp2_discrete_event_system_oop/core/elements/: base.py  create.py  process.py
cp2_discrete_event_system_oop/core/statistics/: element.py  process.py
cp2_discrete_event_system_oop/core/utils/: classes.py  constants.py  functions.py
cp3_model_mass_serving/: auto_bank_task.py  ill_hospital_task.py  requirements.txt
cp3_model_mass_serving/solutions/auto_bank/: calculate.py  transition.py  worker.py
cp3_model_mass_serving/solutions/ill_hospital/: abstract.py  create.py  format.py  transition.py  util.py
lib_queue_sim/: .gitignore  pyproject.toml
lib_queue_sim/lib_queue_sim/: log.py  utils.py
lib_queue_sim/lib_queue_sim/element/: abstract.py  create.py  format.py  transition.py  worker.py
lib_queue_sim/lib_queue_sim/model/: base.py  stats.py
lib_queue_sim/lib_queue_sim/structs/: collections.py  queues.py
