[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "lib_queue_sim"
description = "Kochev Hennadii IP91 Library for queueing simulation"
version = "0.0.1"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Kochev Hennadii IP91" }
]